# CNN

./: CMakeLists.txt  README.md  batch_classification.cpp  caffefication.cpp  caffefication.h  classification.cpp  classification_oldcaffe.cpp  classify CNN 4class list.bat  testOnTiles.bat
classification/: CMakeLists.txt  classification.cpp  classify3d.cpp
classificationDllTest/: CMakeLists.txt
hyperface_resnet/: config.json  drawing.py  imgviewer_conversions.py  models.py  resnet.py  train.py
hyperface_resnet/extensions/: sequential_evaluator.py
hyperface_vgg/: README.txt  aflw_dataset.py  config.json  drawing.py  hyperface.py  imgviewer_conversions.py  menpo_dataset.py  models.py  train.py
hyperface_vgg/docker/: Dockerfile  README.txt  create_docker_image  requirements.txt  run_docker_image
hyperface_vgg/extensions/: sequential_evaluator.py
hyperface_yolo_tf/: hyperface.py
postprocessing/: CMakeLists.txt  postprocessing.cpp
py/: RUNALL-CV.py  augment_3d_image.py  cutImageByTiles.py  cutImageByTiles.py.bat  export_database.py  k.py  ko.py  make_file_names.py  make_sample_names_2-classes.py  make_sample_names_3-classes.py  make_sample_names_4-classes.py  renaming.py  run_cv.py  run_cv.py.bat  run_cv.py.sh  run_test_on_3d_image.py  run_test_on_3d_image.py.bat  run_with_path.bat  sampleNames.py  saratan_test.py  test_net.bat  validateByIterations.py  validate_by_terations.py
py/pycaffe/: PythonLayer.py
retail/: README.txt  calc_yolo_metrics.py  make_yolo_annotations.py  retail.data
retail/docker/: Dockerfile
retail/early_experiments/: dataset.py  model.py  model2.py  segmenter.py
ultrasound/: autoencoder.py  baseline_model.py  calculate_distance_matrix.py  clusterize_videos.py  dataset.py  encode_images.py  output_close_videos.py  postprocess.ipynb  run_cv.sh  run_loocv.sh  train.py  train_autoencoder.py
utils/: CMakeLists.txt  createRectangleMaskAroundMask.cpp  cutImageBySlices.cpp  cutImageByTiles.cpp  dilateMask.cpp  postprocessing.cpp  preprocess.h  resampleMask.cpp  runPreprocess.cpp  validation.cpp  validationRetVOE.cpp
utils/mini-AGTK/: CMakeLists.txt  agtkBinaryImageUtilities.cxx  agtkBinaryImageUtilities.h  agtkCommandLineArgumentParser.h  agtkConfusionMatrixBasedMetrics.h  agtkConfusionMatrixBasedMetrics.hxx  agtkCoreExport.h  agtkDistanceBasedMetrics.h  agtkDistanceBasedMetrics.hxx  agtkExport.h  agtkIO.cxx  agtkIO.h  agtkImageFilteringShortcuts.h  agtkImageSimilarityMetricsBase.h  agtkImageSimilarityMetricsBase.hxx  agtkMetricInfo.cxx  agtkMetricInfo.h  agtkResampling.h  agtkTypes.h
validation/: CMakeLists.txt  moveTumorHack.cpp  validation.cpp  validationRetVOE.cpp
